Adding to paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,4 +1,4 @@
-@book{Martin:2004,
+@book{martin:2004,
     place={Cambridge},
     title={Electronic Structure: Basic Theory and Practical Methods},
     DOI={10.1017/CBO9780511805769},
@@ -7,7 +7,7 @@
     year={2004}
 }
 
-@article{Hafner:2008,
+@article{hafner:2008,
     author = {Hafner, Jürgen},
     title = {Ab-initio simulations of materials using VASP: Density-functional theory and beyond},
     journal = {Journal of Computational Chemistry},
@@ -62,4 +62,42 @@
     year = {2016},
     doi = {https://doi.org/10.1016/j.cattod.2015.10.009},
     author = {Ivo A.W. Filot and Farid Fariduddin and Robin J.P. Broos and Bart Zijlstra and Emiel J.M. Hensen},
+}
+
+@InCollection{ParaView,
+  author    = {James Ahrens and Berk Geveci and Charles Law},
+  booktitle = {Visualization Handbook},
+  publisher = {Elesvier},
+  title     = {{ParaView}: An End-User Tool for Large Data Visualization},
+  year      = {2005},
+  note      = {{ISBN}~978-0123875822},
+}
+
+@book{OpenDX,
+  title     = "OpenDX Paths to Visualization",
+  author    = "David L. Thompson and Jeff A. Braun and Ray Ford",
+  year      = 2004,
+  publisher = "Visualization and Imagery Solutions Inc.",
+  address   = "Missoula"
+}
+
+
+@article{momma:2011,
+    author = "Momma, Koichi and Izumi, Fujio",
+    title = "{{\it VESTA3} for three-dimensional visualization of crystal, volumetric and morphology data}",
+    journal = "Journal of Applied Crystallography",
+    year = "2011",
+    volume = "44",
+    number = "6",
+    pages = "1272-1276",
+    month = "Dec",
+    doi = {10.1107/S0021889811038970},
+}
+
+@misc{papior:2023,
+  author = {Papior, Nick},
+  title  = {sisl: v0.13.0},
+  year   = {2023},
+  doi    = {10.5281/zenodo.597181},
+  url    = {https://doi.org/10.5281/zenodo.597181}
 }
