--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -101,3 +101,31 @@
   doi    = {10.5281/zenodo.597181},
   url    = {https://doi.org/10.5281/zenodo.597181}
 }
+
+@MISC{eigenweb,
+    author = {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
+    title = {Eigen v3},
+    howpublished = {http://eigen.tuxfamily.org},
+    year = {2010}
+}
+
+@misc{BoostLibrary,
+    author = {Boost},
+    year   = {2015},
+    title  = {Boost C++ Libraries},
+    howpublished = "{http://www.boost.org/}",
+}
+
+@misc{CairoLibrary,
+    author = {Cairo},
+    year   = {2005},
+    title  = {Cairo},
+    howpublished = "{https://www.cairographics.org/}",
+}
+
+@misc{TclapLibrary,
+    author = {Michael E. Smoot and Daniel Aarno and others},
+    year   = {2009},
+    title  = {Templatized C++ Command Line Parser Library},
+    howpublished = "{https://tclap.sourceforge.net/}",
+}
