Expanding paper and fixing headers in code

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -129,3 +129,36 @@
     title  = {Templatized C++ Command Line Parser Library},
     howpublished = "{https://tclap.sourceforge.net/}",
 }
+
+@article{lebedev:1976,
+  title={Quadratures on a sphere},
+  author={V. I. Lebedev},
+  journal={Ussr Computational Mathematics and Mathematical Physics},
+  year={1976},
+  volume={16},
+  pages={10-24}
+}
+
+@Article{hunter:2007,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing in Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python for
+  application development, interactive scripting, and publication-quality
+  image generation across user interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@software{MATLAB,
+    year = {2022},
+    author = {The MathWorks Inc.},
+    title = {MATLAB version: 9.13.0 (R2022b)},
+    publisher = {The MathWorks Inc.},
+    address = {Natick, Massachusetts, United States},
+    url = {https://www.mathworks.com}
+}
