Improving documentation and paper per reviewer suggestions

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -169,7 +169,7 @@
 
 @software{MATLAB,
     year = {2022},
-    author = {The MathWorks Inc.},
+    author = {{The MathWorks Inc.}},
     title = {MATLAB version: 9.13.0 (R2022b)},
     publisher = {The MathWorks Inc.},
     address = {Natick, Massachusetts, United States},
